Fix #2 decoupled request from service for saveEservice api and consequent refactoring of junits